Fix: no-scrollbar style

--- a/dgshahr-frontend/app/globals.css
+++ b/dgshahr-frontend/app/globals.css
@@ -114,7 +114,6 @@ input[type='range']::-webkit-slider-thumb:hover {
 
 
 .no-scrollbar {
-  overflow-x: auto;
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
